# DeckSaves

./: Cargo.toml  README.md  TROUBLESHOOTING.md  VERSIONING_GUIDE.md  package-lock.json  package.json  vite.config.ts
.github/: README.md
.github/workflows/: build.yml  dependencies.yml  dev-build.yml  quality.yml  release.yml
cli/: Cargo.toml  Dockerfile
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  crypto.rs  daemon.rs  lib.rs  progress.rs  steam.rs  sync.rs  versioned_sync.rs  versioning.rs  watcher.rs
core/src/storage/: providers.rs
examples/: decksaves.service
readme/: versioning.md
src/: App.vue  style.css  types.ts
src/components/: ConfigPanel.vue  GameList.vue  GameList_clean.vue  GameList_new.vue  SteamDiscovery.vue  StorageConfig.vue  SyncProgressModal.vue  SyncStatus.vue  VersionHistory.vue
tauri-ui/: Cargo.toml  tauri.conf.json
tauri-ui/capabilities/: main-capability.json
tauri-ui/icons/: icon.rgba
tauri-ui/src/: commands.rs  lib.rs  main.rs
