[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-sync"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
