[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
anyhow = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
directories = "5.0"
toml = "0.8"