[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
anyhow = "1.0"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
directories = "5.0"
toml = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
regex = "1.0"
glob = "0.3"
dirs = "5.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.51"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["signal"] }

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.6"