[package]
name = "tauri-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "tauri_ui"
crate-type = ["cdylib"]

[dependencies]
core = { path = "../core" }
tauri = { version = "1.0", features = [ "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }
