[package]
name = "tauri-ui"
version = "0.1.0"
edition = "2021"

# Change to a binary crate to enable running as an app
[[bin]]
name = "decksaves-gui"
path = "src/main.rs"

[dependencies]
decksaves_core = { path = "../core", package = "core" }
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
